resources/jenkins-deployment0.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-team0
  namespace: team0
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins-team0
        team: team0
    spec:
      containers:
      - name: jenkins
        image: jenkins:2.32.2
        ports:
        - containerPort: 8080
