resources/jenkins-service0.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-team0-service
  namespace: team0
  labels:
    serv: jenkins-team0
    team: team0
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31862
  selector:
    app: jenkins-team0
